--- a/config/samples/minio_v1_bucket.yaml
+++ b/config/samples/minio_v1_bucket.yaml
@@ -9,7 +9,6 @@ metadata:
     app.kubernetes.io/created-by: minio-operator
   name: bucket-sample
 spec:
-  region: us-east-1
+  region: eu-south-1
   objectLocking: true
   quota: 10000000
-  emptyOnDelete: true
